# podcast-backup

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.toml.example  pyproject.toml
podcast_backup/: __init__.py  cli.py  config.py  deleted.py  downloader.py  episode_processor.py  feed_builder.py  logger.py  metadata.py  rss.py  utils.py  versioning.py
