[project]
name = "podcast-backup"
version = "0.2.0"
description = "Podcast RSS feed backup tool that downloads episodes locally"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "feedparser>=6.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "lxml>=4.9.0",
]

[project.scripts]
podcast-backup = "podcast_backup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
